# github-system-tests

./: Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: rust.yml
config/: default.toml
src/: configuration.rs  main.rs
system-tests/: devlocal.postman_environment.json  docker-compose.yaml  github-system-tests.postman_collection.json  system-test.postman_environment.json
